# autosoa

./: .gitignore  README.md
dashboard/: README.md  app.py  config.py  requirements.txt
dashboard/models/: vehicle_data.py
dashboard/routes/: api.py  views.py
dashboard/services/: data_service.py  event_service.py
dashboard/static/css/: styles.css
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
dashboard/vehicle/: __init__.py  client.py  exceptions.py
fuel_level_ecu/: CMakeLists.txt  example_usage.cpp
obd_go_client/: go.mod  main.go
obd_go_client/proto/: obd_service_grpc.pb.go
obd_service/: CMakeLists.txt
obd_service/include/: fuel_level_sensor.h  obd_service_impl.h
obd_service/src/: fuel_level_sensor.cpp  obd_client.cpp  obd_server_main.cpp  obd_service_impl.cpp
proto/: lighting_service.proto  obd_service.proto
signalservice/: README.md  go.mod  go.sum
signalservice/cmd/signalservice/: main.go
signalservice/internal/config/: config.go
signalservice/internal/gateway/: gateway.go
signalservice/internal/handlers/: fuel.go  lights.go
signalservice/internal/signal/: signal.go
signalservice/pkg/middleware/: json.go
signalservice/proto/: lighting_service.pb.go  lighting_service_grpc.pb.go  obd_service.pb.go
zonal_controller/: CMakeLists.txt  README.md  config.yaml
zonal_controller/include/: config.hpp  logger.hpp  version.h.in
zonal_controller/include/hardware/: body_lights.h  fuel_level_sensor.h
zonal_controller/include/services/: lighting_service.h  obd_service.h
zonal_controller/src/: config.cpp  server_main.cpp
zonal_controller/src/hardware/: body_lights.cpp  fuel_level_sensor.cpp
zonal_controller/src/services/: lighting_service.cpp  obd_service.cpp
